<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_logo"
        style="@style/ViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/logo"
        android:textColor="@color/secondary_text"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_for_list_of_cards"/>

    <Button
        style="@style/ButtonForList"
        android:id="@+id/button_for_list_of_cards"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginBottom="24dp"
        android:text="@string/list_of_cards"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:textSize="18sp"
        android:textColor="@color/secondary_text"
        android:drawableTop="@drawable/icon_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_for_quiz" />

    <Button
        style="@style/ButtonForQuiz"
        android:id="@+id/button_for_quiz"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginBottom="48dp"
        android:text="@string/start_quiz"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:textSize="18sp"
        android:textColor="@color/secondary_text"
        android:drawableTop="@drawable/icon_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>